--- a/config/locales/views/patients/de.yml
+++ b/config/locales/views/patients/de.yml
@@ -20,15 +20,15 @@ de:
       patient_name: "Patientenname"
       name_placeholder: "Max Mustermann"
       street: "Straße"
-      street_placeholder: "Straße"
-      number: "Nummer"
-      number_placeholder: "Nummer"
+      street_placeholder: "Bahnhofstrasse"
+      number: "Hausnummer"
+      number_placeholder: "8"
       zip_code: "Postleitzahl"
-      zip_code_placeholder: "Postleitzahl"
-      city: "Stadt"
-      city_placeholder: "Stadt"
-      state: "Bundesland"
-      state_placeholder: "Bundesland"
+      zip_code_placeholder: "8001"
+      city: "Ortschaft"
+      city_placeholder: "Zürich"
+      state: "Kanton"
+      state_placeholder: "Zürich"
       country: "Land"
       country_default: "Schweiz"
       select_client: "Zu welcher Organisation gehört dieser Patient?"
