--- a/config/locales/views/patients/en.yml
+++ b/config/locales/views/patients/en.yml
@@ -26,15 +26,15 @@ en:
       patient_name: "Patient Name"
       name_placeholder: "Jane Doe"
       street: "Address"
-      street_placeholder: "Address"
+      street_placeholder: "Bahnofstrasse"
       number: "Number"
-      number_placeholder: "Number"
+      number_placeholder: "8"
       zip_code: "ZIP"
-      zip_code_placeholder: "ZIP"
+      zip_code_placeholder: "8001"
       city: "City"
-      city_placeholder: "City"
-      state: "State"
-      state_placeholder: "State"
+      city_placeholder: "Zurich"
+      state: "Canton"
+      state_placeholder: "Zurich"
       country: "Country"
       country_default: "Svizzera"
       select_client: "Whose organisation this patient belongs to?"
