--- a/config/locales/views/patients/fr.yml
+++ b/config/locales/views/patients/fr.yml
@@ -18,20 +18,20 @@ fr:
       delete: "Supprimer"
     form:
       patient_name: "Nom du patient"
-      name_placeholder: " Monsieur Tout-le-monde"
-      street: "Rue"
-      street_placeholder: "Rue"
+      name_placeholder: " Monsieur Pierre Dupont"
+      street: "Nom de la rue"
+      street_placeholder: "Rue Pépinet"
       number: "Numéro"
-      number_placeholder: "Numéro"
-      zip_code: "Code Postal"
-      zip_code_placeholder: "Code Postal"
+      number_placeholder: "8"
+      zip_code: "NPA"
+      zip_code_placeholder: "1003"
       city: "Ville"
-      city_placeholder: "Ville"
-      state: "État"
-      state_placeholder: "État"
+      city_placeholder: "Lausanne"
+      state: "Canton"
+      state_placeholder: "Vaud"
       country: "Pays"
       country_default: "Suisse"
-      select_client: "A quelle organisation appartient ce patient ?"
+      select_client: "Á quelle organisation appartient ce patient ?"
       submit: "Valider et enregistrer"
     new:
       title: "Vous créez un nouveau patient"
