--- a/config/locales/views/patients/it.yml
+++ b/config/locales/views/patients/it.yml
@@ -18,16 +18,16 @@ it:
     form:
       patient_name: "Nome del paziente"
       name_placeholder: "Mario Rossi"
-      street: "Via"
-      street_placeholder: "Via"
-      number: "Numero"
-      number_placeholder: "Numero"
+      street: "Indirizzo"
+      street_placeholder: "Via Nassa"
+      number: "Civico"
+      number_placeholder: "8"
       zip_code: "CAP"
-      zip_code_placeholder: "CAP"
+      zip_code_placeholder: "6900"
       city: "Città"
-      city_placeholder: "Città"
-      state: "Stato"
-      state_placeholder: "Stato"
+      city_placeholder: "Lugano"
+      state: "Cantone"
+      state_placeholder: "Ticino"
       country: "Paese"
       country_default: "Svizzera"
       select_client: "A quale organizzazione appartiene questo paziente?"
