--- a/config/locales/views/shared/navbar.de.yml
+++ b/config/locales/views/shared/navbar.de.yml
@@ -10,6 +10,6 @@ de:
       my_account: "Mein Konto"
       edit_profile: "Konto bearbeiten"
       log_out: "Ausloggen"
-      login: "Anmelden"
+      log_in: "Anmelden"
       sign_up: "Registrieren"
       language: "Sprache"
