cleaning & wording improvement (time > duration)

--- a/config/locales/devise.views.en.yml
+++ b/config/locales/devise.views.en.yml
@@ -107,6 +107,7 @@ en:
         select_time_zone: Select your time zone
         select_language: Select your language
         language: '%{selected_language}'
+        delete_account: Be careful, the following action is not reverisble. If you decide to delete your account, we will not be able to recover it and you will lose all your data.
       new:
         title: You are creating a new account
         sign_up: Sign up
