--- a/config/locales/views/analytics/index.de.yml
+++ b/config/locales/views/analytics/index.de.yml
@@ -9,7 +9,7 @@ de:
       distance: "Entfernung"
       appointments: "Termine"
       during_this_period: "Während dieser Zeit bist du gefahren"
-      km_and_minutes: "%{distance} km und %{time} Minuten"
+      distance_and_duration: "%{distance} km und %{duration} Minuten"
       for_appointments: "für %{count} Termine"
       appointments_amount: "Total: %{count} Termine"
       deleted_patient: "Gelöschter Patient"
