--- a/config/locales/views/analytics/index.fr.yml
+++ b/config/locales/views/analytics/index.fr.yml
@@ -9,7 +9,7 @@ fr:
       distance: "Distance"
       appointments: "Rendez-vous"
       during_this_period: "Pendant cette période, tu as parcouru"
-      km_and_minutes: "%{distance} km & %{time} minutes"
+      distance_and_duration: "%{distance} km & %{duration} minutes"
       for_appointments: "pour %{count} rendez-vous"
       appointments_amount: "Total : %{count} rendez-vous"
       deleted_patient: "Patient supprimé"
