--- a/config/locales/devise.views.fr.yml
+++ b/config/locales/devise.views.fr.yml
@@ -76,7 +76,7 @@ fr:
         subject: Instructions pour déverrouiller le compte
     omniauth_callbacks:
       failure: 'Nous ne pouvons pas vous authentifier depuis %{kind} pour la raison suivante : ''%{reason}''.'
-      success: Autorisé par votre compte %{kind}.
+      success: Vous avez été authentifié avec succes par votre compte %{kind}.
     passwords:
       edit:
         change_my_password: Changer mon mot de passe
