--- a/config/locales/views/pages/fr.yml
+++ b/config/locales/views/pages/fr.yml
@@ -19,7 +19,7 @@ fr:
       distance_management_desc: "Calculs automatiques de distance et de temps entre les patients ou les clients sans effort."
       safe_by_design: "Sûr par conception"
       safe_by_design_desc: "Vos données sont sécurisées par cryptage et protégées avec soin."
-      clutter_free_design: "Design épuré"
+      clutter_free_design: "Design simplifié"
       clutter_free_design_desc: "Interface intuitive et conviviale pour une expérience agréable."
       peace_of_mind: "Tranquillité d'esprit"
       peace_of_mind_desc: "Simplifiez vos routines pendant que vous naviguez dans vos tâches quotidiennes."
