--- a/config/locales/views/appointments/en.yml
+++ b/config/locales/views/appointments/en.yml
@@ -5,7 +5,10 @@ en:
       new_appointment: "New appointment"
       calculate_distance_time: "Calculate distance and time"
       today_you_drove: "Today you drove"
+      driving_distance: "%{driving_distance} km"
+      driving_duration: "%{driving_duration} minutes"
       distance_and_duration: "%{distance} km & %{duration} minutes"
+      click_to_calculate_distance: "Click to calculate distance and time"
     new:
       new_appointment: "You are creating a new appointment"
       select_patient: "Select patient"
