--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -145,6 +145,7 @@ it:
       header:
         one: 'Non posso salvare questo %{model}: %{count} errore'
         other: 'Non posso salvare questo %{model}: %{count} errori.'
+    required_field: this field is required
   helpers:
     select:
       prompt: Seleziona...
@@ -214,5 +215,11 @@ it:
       long: "%d %B %Y %H:%M"
       short: "%d %b %H:%M"
     pm: pm
-  appointment_created_success: L'appuntamento é stato creato con successo.
-  appointment_deleted_success: L'appuntamento é stato eliminato con successo.
+  appointment_created_success: L'appuntamento é stato creato ✅
+  appointment_deleted_success: L'appuntamento é stato eliminato.
+  patient_created_success: Il paziente é stato creato ✅
+  patient_updated_success: Il paziente é stato modificato.
+  patient_deleted_success: Il paziente é stato eliminato.
+  client_created_success: L'organizzazione é stato creata ✅
+  client_updated_success: L'organizzazione é stato modificata.
+  client_deleted_success: L'organizzazione é stato eliminata.
