--- a/config/locales/views/clients/en.yml
+++ b/config/locales/views/clients/en.yml
@@ -24,6 +24,11 @@ en:
       client_name: "%{name}"
       client_email: "%{email}"
     form:
-      name_placeholder: "Prima Spitex"
-      email_placeholder: "prima@email.com"
+      name_placeholder: "Spitex"
+      subdomain_placeholder: "Spitex"
+      email_placeholder: "spitex@email.com"
       submit: "Validate and save"
+    notice:
+      client_created_success: "Client created successfully."
+      client_updated_success: "Client updated successfully."
+      client_deleted_success: "Client deleted successfully."
