--- a/config/locales/views/clients/it.yml
+++ b/config/locales/views/clients/it.yml
@@ -11,9 +11,9 @@ it:
       client_name: "%{name}"
       client_email: "%{email}"
       send_report: "Invia report mensile"
-      back_to_clients: "Ritorna ai organizzazioni"
       edit_client: "Modifica organizzazione"
       delete_client: "Elimina organizzazione"
+      back_to_clients: "Ritorna ai organizzazioni"
     new:
       new_client: "Stai creando un nuova organizzazione"
       back_to_clients: "Ritorna ai organizzazioni"
@@ -24,6 +24,7 @@ it:
       client_name: "%{name}"
       client_email: "%{email}"
     form:
-      name_placeholder: "Prima Spitex"
-      email_placeholder: "prima@email.com"
+      name_placeholder: "Spitex"
+      subdomain_placeholder: "Spitex"
+      email_placeholder: "spitex@email.com"
       submit: "Convalida e salva"
