fix patient creation and i18n notices

--- a/config/locales/views/patients/en.yml
+++ b/config/locales/views/patients/en.yml
@@ -36,6 +36,6 @@ en:
       state: "Canton"
       state_placeholder: "Zurich"
       country: "Country"
-      country_default: "Svizzera"
+      country_default: "Switzerland"
       select_client: "Whose organisation this patient belongs to?"
       submit: "Save"
