--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -220,6 +220,7 @@ it:
   patient_created_success: Il paziente é stato creato ✅
   patient_updated_success: Il paziente é stato modificato.
   patient_deleted_success: Il paziente é stato eliminato.
-  client_created_success: L'organizzazione é stato creata ✅
-  client_updated_success: L'organizzazione é stato modificata.
-  client_deleted_success: L'organizzazione é stato eliminata.
+  tenant_created_success: L'organizzazione é stato creata ✅
+  tenant_updated_success: L'organizzazione é stato modificata.
+  tenant_deleted_success: L'organizzazione é stato eliminata.
+  tenant_not_member: Non sei membro di questa organizzazione.
