--- a/config/locales/views/patients/it.yml
+++ b/config/locales/views/patients/it.yml
@@ -31,7 +31,7 @@ it:
       state_placeholder: "Ticino"
       country: "Paese"
       country_default: "Svizzera"
-      select_client: "A quale organizzazione appartiene questo paziente?"
+      select_tenant: "A quale organizzazione appartiene questo paziente?"
       submit: "Convalida e salva"
     new:
       title: "Stai creando un nuovo paziente"
