--- a/config/locales/views/clients/fr.yml
+++ b/config/locales/views/clients/fr.yml
@@ -1,30 +1,29 @@
 fr:
-  clients:
+  tenants:
     index:
       title: "Tous les organisations"
-      new_client: "Nouvelle organisation"
+      new_tenant: "Nouvelle organisation"
       footer:
         zero: "Il n'y a pas de organisations, allez en créer un"
         one: "Vous avez un organisation"
         other: "Vous avez %{count} organisations"
     show:
-      client_name: "%{name}"
-      client_email: "%{email}"
+      tenant_name: "%{name}"
+      tenant_email: "%{email}"
       send_report: "Envoyer le rapport mensuel"
-      edit_client: "Modifier l'organisation"
-      delete_client: "Supprimer l'organisation"
-      back_to_clients: "Retour à la liste des organisations"
+      edit_tenant: "Modifier l'organisation"
+      delete_tenant: "Supprimer l'organisation"
+      back_to_tenants: "Retour à la liste des organisations"
     new:
-      new_client: "Vous créez un nouvelle organisation"
-      back_to_clients: "Retour à la liste des organisations"
+      new_tenant: "Vous créez un nouvelle organisation"
+      back_to_tenants: "Retour à la liste des organisations"
     edit:
       title: "Vous modifiez %{name}"
-      back_to_clients: "Retour à la liste des organisations"
-    client:
-      client_name: "%{name}"
-      client_email: "%{email}"
+      back_to_tenants: "Retour à la liste des organisations"
+    tenant:
+      tenant_name: "%{name}"
+      tenant_email: "%{email}"
     form:
       name_placeholder: "Spitex"
-      subdomain_placeholder: "Spitex"
       email_placeholder: "spitex@email.com"
       submit: "Valider et enregistrer"
