--- a/config/locales/views/pages/en.yml
+++ b/config/locales/views/pages/en.yml
@@ -6,7 +6,7 @@ en:
       new_appointment: "New appointment"
       analytics: "All appointments"
       patients: "Patients"
-      clients: "Organisations"
+      tenants: "Organisations"
       export_data: "Export appointments"
       share_feedback: "Help us improve"
       calcometer: "Calcometer"
