--- a/config/locales/views/shared/navbar.en.yml
+++ b/config/locales/views/shared/navbar.en.yml
@@ -6,7 +6,7 @@ en:
       appointments: "New appointment"
       analytics: "All appointments"
       patients: "Patients"
-      clients: "Organisations"
+      tenants: "Organisations"
       my_account: "My account"
       edit_profile: "Edit account"
       log_out: "Log out"
