--- a/config/locales/views/shared/navbar.it.yml
+++ b/config/locales/views/shared/navbar.it.yml
@@ -6,7 +6,7 @@ it:
       appointments: "Nuovo appuntamento"
       analytics: "Tutti appuntamenti"
       patients: "Pazienti"
-      clients: "Organizzazioni"
+      tenants: "Organizzazioni"
       my_account: "Profilo"
       edit_profile: "Modifica profilo"
       log_out: "Disconnetti"
