move analytics controller methods & views to appointment

--- a/config/locales/views/appointments/de.yml
+++ b/config/locales/views/appointments/de.yml
@@ -1,26 +1,35 @@
 de:
   appointments:
-    index:
-      title: "Termine am %{date}"
-      new_appointment: "Neuer Termin"
-      calculate_distance_time: "Entfernung und Zeit berechnen"
-      today_you_drove: "Heute sind Sie gefahren"
-      driving_distance: "%{driving_distance} km"
-      driving_duration: "%{driving_duration} Minuten"
-      distance_and_duration: "%{distance} km & %{duration} Minuten"
-      click_to_calculate_distance: "Klicken hier zu berechnen"
-    new:
-      new_appointment: "Sie erstellen einen neuen Termin"
-      select_patient: "Patient auswählen"
-      start_time: "Startzeit"
-      end_time: "Endzeit"
-      submit: "Validieren und speichern"
-      back_to_appointments: "Zurück zu den Terminen"
-    show:
-      back_to_appointments: "Zurück zu den Terminen"
-      delete_appointment: "Diesen Termin löschen"
-      delete: "Löschen"
-    appointment:
-      deleted_patient: "Gelöschter Patient"
-      arrived_at: "Angekommen um %{time}"
-      left_at: "Verlassen um %{time}"
+    title: "Termine am %{date}"
+    new_appointment: "Neuer Termin"
+    calculate_distance_time: "Entfernung und Zeit berechnen"
+    today_you_drove: "Heute sind Sie gefahren"
+    driving_distance: "%{driving_distance} km"
+    driving_duration: "%{driving_duration} Minuten"
+    distance_and_duration: "%{distance} km & %{duration} Minuten"
+    click_to_calculate_distance: "Klicken hier zu berechnen"
+    new_appointment: "Sie erstellen einen neuen Termin"
+    select_patient: "Patient auswählen"
+    start_time: "Startzeit"
+    end_time: "Endzeit"
+    submit: "Validieren und speichern"
+    back_to_appointments: "Zurück zu den Terminen"
+    back_to_appointments: "Zurück zu den Terminen"
+    delete_appointment: "Diesen Termin löschen"
+    delete: "Löschen"
+    deleted_patient: "Gelöschter Patient"
+    arrived_at: "Angekommen um %{time}"
+    left_at: "Verlassen um %{time}"
+    title: "Alle Termine"
+    today: "Heute"
+    start_date: "Startdatum"
+    end_date: "Enddatum"
+    submit: "Absenden"
+    distance: "Entfernung"
+    appointments: "Termine"
+    during_this_period: "Während dieser Zeit bist du gefahren"
+    distance_and_duration: "%{distance} km und %{duration} Minuten"
+    for_appointments: "für %{count} Termine"
+    appointments_amount: "Total: %{count} Termine"
+    deleted_patient: "Gelöschter Patient"
+    minutes: "Minuten"
