--- a/config/locales/views/appointments/en.yml
+++ b/config/locales/views/appointments/en.yml
@@ -1,26 +1,34 @@
 en:
   appointments:
-    index:
-      title: "Appointments on %{date}"
-      new_appointment: "New appointment"
-      calculate_distance_time: "Calculate distance and time"
-      today_you_drove: "Today you drove"
-      driving_distance: "%{driving_distance} km"
-      driving_duration: "%{driving_duration} minutes"
-      distance_and_duration: "%{distance} km & %{duration} minutes"
-      click_to_calculate_distance: "Click to calculate distance and time"
-    new:
-      new_appointment: "You are creating a new appointment"
-      select_patient: "Select patient"
-      start_time: "Start time"
-      end_time: "End time"
-      submit: "Validate and save"
-      back_to_appointments: "Back to appointments"
-    show:
-      back_to_appointments: "Back to appointments"
-      delete_appointment: "Delete this appointment"
-      delete: "Delete"
-    appointment:
-      deleted_patient: "Deleted patient"
-      arrived_at: "Arrived at %{time}"
-      left_at: "Left at %{time}"
+    title: "Appointments on %{date}"
+    new_appointment: "New appointment"
+    calculate_distance_time: "Calculate distance and time"
+    today_you_drove: "Today you drove"
+    driving_distance: "%{driving_distance} km"
+    driving_duration: "%{driving_duration} minutes"
+    distance_and_duration: "%{distance} km & %{duration} minutes"
+    click_to_calculate_distance: "Click to calculate distance and time"
+    new_appointment: "You are creating a new appointment"
+    select_patient: "Select patient"
+    start_time: "Start time"
+    end_time: "End time"
+    submit: "Validate and save"
+    back_to_appointments: "Back to appointments"
+    delete_appointment: "Delete this appointment"
+    delete: "Delete"
+    deleted_patient: "Deleted patient"
+    arrived_at: "Arrived at %{time}"
+    left_at: "Left at %{time}"
+    title: "All Appointments"
+    today: "Today"
+    start_date: "Start Date"
+    end_date: "End Date"
+    submit: "Submit"
+    distance: "Distance"
+    appointments: "Appointments"
+    during_this_period: "During this period, you drove"
+    distance_and_duration: "%{distance} km & %{duration} minutes"
+    for_appointments: "for %{count} appointments"
+    appointments_amount: "Total %{count} appointments"
+    deleted_patient: "Deleted patient"
+    minutes: "minutes"
